tests/baselines/reference/symbolProperty46.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty46.ts(2,9): error TS2733: Property '[Symbol.hasInstance]' was also declared here.
tests/cases/conformance/es6/Symbols/symbolProperty46.ts(6,9): error TS2718: Duplicate property '[Symbol.hasInstance]'.
tests/cases/conformance/es6/Symbols/symbolProperty46.ts(10,1): error TS2322: Type '0' is not assignable to type 'string'.


==== tests/cases/conformance/es6/Symbols/symbolProperty46.ts (3 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2733: Property '[Symbol.hasInstance]' was also declared here.
            return "";
        }
        // Should take a string
        set [Symbol.hasInstance](x) {
            ~~~~~~~~~~~~~~~~~~~~
!!! error TS2718: Duplicate property '[Symbol.hasInstance]'.
        }
    }
    
    (new C)[Symbol.hasInstance] = 0;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '0' is not assignable to type 'string'.
    (new C)[Symbol.hasInstance] = "";